# osint-tool

./: .env.example  LICENSE  README.md  pyproject.toml
osint/: ai.py  main.py
osint/modules/: base.py  domain.py  email.py  ip.py  people.py
osint/output/: terminal.py
