[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ghostmap"
version = "0.1.0"
description = "Multi-module OSINT CLI tool"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "rich",
    "aiohttp",
    "requests",
    "python-dotenv",
    "beautifulsoup4",
    "ddgs",
    "sherlock-project",
    "shodan",
    "python-whois",
    "dnspython",
    "tldextract",
]

[project.scripts]
ghostmap = "osint.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["osint*"]